--- a/example-425-spring-mvc-intro/src/main/resources/templates/greeting-view.html
+++ b/example-425-spring-mvc-intro/src/main/resources/templates/greeting-view.html
@@ -1,11 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <meta charset="UTF-8">
 <title>Greeting</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
-
+<!-- The 'View' part of MVC pattern -->
 <body>
 	<h1 th:text="${greeting.message}">Greeting Message</h1>
 </body>
