--- a/example-425-spring-mvc-intro/src/main/resources/templates/greeting-view.html
+++ b/example-425-spring-mvc-intro/src/main/resources/templates/greeting-view.html
@@ -1,11 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Greeting</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="UTF-8">
+    <title>Greeting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <!-- The 'View' part of MVC pattern -->
 <body>
-	<h1 th:text="${greeting.message}">Greeting Message</h1>
+
+<!-- we can access our Greeting instance via the attribute name "greeting" -->
+<!-- The expression ${greeting.message} calls the getMessage() method of our Greeting instance  -->
+<h1 th:text="${greeting.message}">Greeting Message</h1>
 </body>
 </html>
