--- a/example-430-spring-web-calculator/src/main/resources/templates/calc.html
+++ b/example-430-spring-web-calculator/src/main/resources/templates/calc.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="container">
-		<h1>Calculate with GET</h1>
+		<h1>Calculate via HTTP GET</h1>
 		<form action="calculate">
 			<!-- <form action="calculate" method="get"> -->
 			<!-- GET is default method -->
@@ -26,10 +26,10 @@
 				</div>
 
 				<div class="col-md2">
-					<button name="op" value="PLUS" class="btn mb-1">+</button>
-					<button name="op" value="MINUS" class="btn mb-1">-</button>
-					<button name="op" value="MULTIPLY" class="btn mb-1">*</button>
-					<button name="op" value="DIVIDE" class="btn mb-1">/</button>
+					<button name="op" value="PLUS" class="btn btn-light mb-1">+</button>
+					<button name="op" value="MINUS" class="btn btn-light mb-1">-</button>
+					<button name="op" value="MULTIPLY" class="btn btn-light mb-1">*</button>
+					<button name="op" value="DIVIDE" class="btn btn-light mb-1">/</button>
 				</div>
 
 				<div class="col-md2">
@@ -38,14 +38,14 @@
 
 				<div th:if="${resultGet}" class="col-md2">
 					<span>=</span>
-					<output name="result" th:text="${resultGet}"></output>
+					<output name="resultGet" th:text="${resultGet}"></output>
 				</div>
 			</div>
 		</form>
 	</div>
 
 	<div class="container">
-		<h1>Calculate with POST</h1>
+		<h1>Calculate via HTTP POST</h1>
 		<form action="calculate" method="post">
 			<div class="row">
 				<div class="col-md2">
@@ -54,10 +54,10 @@
 				</div>
 
 				<div class="col-md2">
-					<button name="op" value="PLUS" class="btn mb-1">+</button>
-					<button name="op" value="MINUS" class="btn mb-1">-</button>
-					<button name="op" value="MULTIPLY" class="btn mb-1">*</button>
-					<button name="op" value="DIVIDE" class="btn mb-1">/</button>
+					<button name="op" value="PLUS" class="btn btn-light mb-1">+</button>
+					<button name="op" value="MINUS" class="btn btn-light mb-1">-</button>
+					<button name="op" value="MULTIPLY" class="btn btn-light mb-1">*</button>
+					<button name="op" value="DIVIDE" class="btn btn-light mb-1">/</button>
 				</div>
 
 				<div class="col-md2">
@@ -67,7 +67,7 @@
 
 				<div class="col-md2" th:if="${resultPost}">
 					<span>=</span>
-					<output name="result" th:text="${resultPost}"></output>
+					<output name="resultPost" th:text="${resultPost}"></output>
 				</div>
 			</div>
 		</form>
