--- a/example-440-spring-mvc-marks/src/main/resources/templates/list.html
+++ b/example-440-spring-mvc-marks/src/main/resources/templates/list.html
@@ -3,33 +3,43 @@
 <head th:replace="~{fragments::head}"></head>
 
 <body class="container">
+	<!-- Insert the 'navbar' fragment defined in fragments.html and pass in "list" as the name of the current page. -->
 	<div th:replace="~{fragments::navbar (current=list)}"></div>
 	<h1>All Marks</h1>
 
 	<table class="table">
+
 		<thead class="thead-dark">
 			<tr>
-				<th scope="col">#</th>
-				<th scope="col">Course</th>
-				<th scope="col">Score</th>
-				<th scope="col">Date</th>
-				<th scope="col">Actions</th>
+				<th>#</th>
+				<th>Course</th>
+				<th>Score</th>
+				<th>Date</th>
+				<th>Actions</th>
 			</tr>
 		</thead>
+
 		<tbody>
+			
+			<!-- the collection of Mark instances is accessible via the attribute 'marks' which is passed to the model of the page -->
+		
 			<tr th:if="${marks.empty}">
 				<td colspan="4">No Marks Available</td>
 			</tr>
+			<!--  We iterate over all marks, the current Mark instance is available via 'mark'.  -->
 			<tr th:each="mark, iterator: ${marks}">
-
-				<td th:text="${iterator.index + 1}" scope="row" />
+				
+				<!-- Display information of each Mark instance -->
+				<td th:text="${iterator.index + 1}" />
 				<td th:text="${mark.course.label}" />
 				<td th:text="${mark.score}" />
 				<td th:text="${#temporals.format(mark.date, 'dd.MM.yyyy')}" />
 				<td>
+					<!-- Compute the links for editing a Mark instance -->
 					<a th:href="|edit?markId=${mark.id}|" class="btn btn-primary" role="button">
 						<span class="fa fa-edit"></span>
 					</a>
+					<!-- Compute the links for deleting a Mark instance -->
 					<a th:href="|delete?markId=${mark.id}|" class="btn btn-secondary" role="button">
 						<i class="fa fa-trash"> </i>
 					</a>
