--- a/E10_Backend_SpringBoot/example-440-spring-mvc-marks/src/main/resources/templates/edit.html
+++ b/E10_Backend_SpringBoot/example-440-spring-mvc-marks/src/main/resources/templates/edit.html
@@ -4,48 +4,49 @@
 
 <body class="container">
 
-	<div th:replace="~{fragments::navbar(current=edit)}"></div>
-	
-	<h1>Edit Mark</h1>
+<div th:replace="~{fragments::navbar(current=edit)}"></div>
 
-	<form action="/edit" method="post" th:object="${editMarkForm}">
-		<input type="hidden" th:field="*{markId}">
+<h1>Edit Mark</h1>
 
-		<div class="form-group">
-			<label for="course">Course</label>
-			<input class="form-control" id="course" th:value="${editMarkForm.course.label}" disabled>
-		</div>
+<form action="/edit" method="post" th:object="${editMarkForm}">
+    <input type="hidden" th:field="*{markId}">
 
-		<div class="form-group">
-			<label for="score">Score</label>
-			<input type="number" class="form-control" id="score" placeholder="Enter Score..." th:field="*{score}"
-				th:classappend="${#fields.hasErrors('score') ? 'is-invalid' : ''}" required>
-			<div class="invalid-feedback" th:if="${#fields.hasErrors('score')}" th:errors="*{score}">Invalid score</div>
-		</div>
+    <div class="form-group">
+        <label for="course">Course</label>
+        <input class="form-control" id="course" th:value="${editMarkForm.course.label}" disabled>
+    </div>
 
-		<div class="form-group">
-			<label for="date">Date</label>
-			<div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-				<div class="input-group-prepend" data-target="#datetimepicker1" data-toggle="datetimepicker">
-					<div class="input-group-text">
-						<i class="fa fa-calendar"></i>
-					</div>
-				</div>
-				<!--  name="date" th:value="${#temporals.format(mark.date, 'dd.MM.yyyy')}" -->
-				<input type="text" th:field="*{date}" pattern="\s*(3[01]|[12][0-9]|0?[1-9])\.(1[012]|0?[1-9])\.((?:19|20)\d{2})\s*$"
-					class="form-control datetimepicker-input" data-target="#datetimepicker1"
-					th:classappend="${#fields.hasErrors('date') ? 'is-invalid' : ''}" required />
-				<div class="invalid-feedback" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">Date error</div>
-				<script defer>
-					$('#datetimepicker1').datetimepicker({
-						locale : "de",
-						format : "L"
-					});
-				</script>
-			</div>
-		</div>
+    <div class="form-group">
+        <label for="score">Score</label>
+        <input type="number" class="form-control" id="score" placeholder="Enter Score..." th:field="*{score}"
+               th:classappend="${#fields.hasErrors('score') ? 'is-invalid' : ''}" required>
+        <div class="invalid-feedback" th:if="${#fields.hasErrors('score')}" th:errors="*{score}">Invalid score</div>
+    </div>
 
-		<button type="submit" class="btn btn-primary">Save</button>
-	</form>
+    <div class="form-group">
+        <label for="date">Date</label>
+        <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+            <div class="input-group-prepend" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                <div class="input-group-text">
+                    <i class="fa fa-calendar"></i>
+                </div>
+            </div>
+            <!--  name="date" th:value="${#temporals.format(mark.date, 'dd.MM.yyyy')}" -->
+            <input id="date" type="text" th:field="*{date}"
+                   pattern="\s*(3[01]|[12][0-9]|0?[1-9])\.(1[012]|0?[1-9])\.((?:19|20)\d{2})\s*$"
+                   class="form-control datetimepicker-input" data-target="#datetimepicker1"
+                   th:classappend="${#fields.hasErrors('date') ? 'is-invalid' : ''}" required/>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">Date error</div>
+            <script defer>
+                $('#datetimepicker1').datetimepicker({
+                    locale: "de",
+                    format: "L"
+                });
+            </script>
+        </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
 </body>
 </html>
