--- a/E10_Backend_SpringBoot/example-440-spring-mvc-marks/src/main/resources/templates/new.html
+++ b/E10_Backend_SpringBoot/example-440-spring-mvc-marks/src/main/resources/templates/new.html
@@ -4,51 +4,53 @@
 
 <body class="container">
 
-	<div th:replace="~{fragments::navbar (current=new)}"></div>
+<div th:replace="~{fragments::navbar (current=new)}"></div>
 
-	<h1>Add Mark</h1>
+<h1>Add Mark</h1>
 
-	<form action="/new" method="post" th:object="${newMarkForm}" class="needs-validation">
+<form action="/new" method="post" th:object="${newMarkForm}" class="needs-validation">
 
-		<div class="alert alert-danger" role="alert" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">A simple
-			danger alert—check it out!</div>
+    <div class="alert alert-danger" role="alert" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">A simple
+        danger alert—check it out!
+    </div>
 
-		<div class="form-group">
-			<label for="course">Course</label>
-			<select id="course" class="form-control" th:field="*{courseId}" required autofocus>
-				<option th:each="course: ${courses}" th:value="${course.id}" th:text="${course.label}">Course</option>
-			</select>
-		</div>
+    <div class="form-group">
+        <label for="course">Course</label>
+        <select id="course" class="form-control" th:field="*{courseId}" required autofocus>
+            <option th:each="course: ${courses}" th:value="${course.id}" th:text="${course.label}">Course</option>
+        </select>
+    </div>
 
-		<div class="form-group">
-			<label for="score">Score</label>
-			<input type="number" id="score" class="form-control" 
-				th:field="*{score}" th:classappend="${#fields.hasErrors('score') ? 'is-invalid' : ''}" placeholder="Enter Score..." required>
-			<div class="invalid-feedback" th:if="${#fields.hasErrors('score')}" th:errors="*{score}">Invalid score</div>
-		</div>
+    <div class="form-group">
+        <label for="score">Score</label>
+        <input type="number" id="score" class="form-control"
+               th:field="*{score}" th:classappend="${#fields.hasErrors('score') ? 'is-invalid' : ''}"
+               placeholder="Enter Score..." required>
+        <div class="invalid-feedback" th:if="${#fields.hasErrors('score')}" th:errors="*{score}">Invalid score</div>
+    </div>
 
-		<div class="form-group">
-			<label for="date">Date</label>
-			<div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-				<div class="input-group-prepend" data-target="#datetimepicker1" data-toggle="datetimepicker">
-					<div class="input-group-text">
-						<i class="fa fa-calendar"></i>
-					</div>
-				</div>
-				<input type="text" pattern="\s*(3[01]|[12][0-9]|0?[1-9])\.(1[012]|0?[1-9])\.((?:19|20)\d{2})\s*$"
-					class="form-control datetimepicker-input" data-target="#datetimepicker1" 
-					th:field="*{date}" th:classappend="${#fields.hasErrors('date') ? 'is-invalid' : ''}" required />
-				<script defer>
-					$('#datetimepicker1').datetimepicker({
-						locale : "de",
-						format : "L"
-					});
-				</script>
-				<div class="invalid-feedback" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">Date error</div>
-			</div>
-		</div>
+    <div class="form-group">
+        <label for="date">Date</label>
+        <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+            <div class="input-group-prepend" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                <div class="input-group-text">
+                    <i class="fa fa-calendar"></i>
+                </div>
+            </div>
+            <input id="date" type="text" pattern="\s*(3[01]|[12][0-9]|0?[1-9])\.(1[012]|0?[1-9])\.((?:19|20)\d{2})\s*$"
+                   class="form-control datetimepicker-input" data-target="#datetimepicker1"
+                   th:field="*{date}" th:classappend="${#fields.hasErrors('date') ? 'is-invalid' : ''}" required/>
+            <script defer>
+                $('#datetimepicker1').datetimepicker({
+                    locale: "de",
+                    format: "L"
+                });
+            </script>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">Date error</div>
+        </div>
+    </div>
 
-		<button type="submit" class="btn btn-primary">Add</button>
-	</form>
+    <button type="submit" class="btn btn-primary">Add</button>
+</form>
 </body>
 </html>
